# lf-trace-xronos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  plugin.cmake
.github/workflows/: ci.yml
cmake/: install_deps.cmake.in  lf-trace-xronosConfig.cmake.in
example/src/: CPS.lf  TracePluginCustomCmake.lf  TracePluginSystemPath.lf  TracePluginUserPath.lf
include/: otel_backend.h
lf-api/trace/: CMakeLists.txt
src/: otel_backend.c  trace_impl.c
tests/src/: FederatedTracePluginCustomCmake.lf  FederatedTracePluginSystemPath.lf  FederatedTracePluginUserPath.lf  TracePluginCustomCmake.lf  TracePluginSystemPath.lf  TracePluginUserPath.lf  trace-customcmake.cmake  trace-fedcustomcmake.cmake  trace-systempath.cmake  trace-userpath.cmake
tests/src/lib/: Components.lf
